# learning_cnn_on_vit

./: compose.yml
docker/: dockerfile  pyproject.toml
notebooks/: .gitignore  cnn.ipynb  cnn_debug.ipynb  cnn_learning_on_vit.ipynb  cnn_learning_on_vit_ssda.ipynb  create_ssda_dataset_test.ipynb  vit.ipynb
src/: data_utils.py  loss.py  models.py  reproducibility.py
