[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets==8.0.3",
    "jupyterlab==4.2.5",
    "matplotlib==3.9.2",
    "pandas==2.2.3",
    "scikit-learn==1.5",
    "seaborn==0.13.2",
    "torch==2.5",
    "torchvision==0.20",
    "timm==1.0.11",
]
